fixed to handle basic errors.

--- a/media/v2/main.html
+++ b/media/v2/main.html
@@ -19,15 +19,16 @@
         </div>
         <div id="div_manage">
             <div id="div_bcreate">
-                <button id="btn_create">Create New Room</button><br><br>
                 <div id="div_createform">
                     <label>Room's Username:</label> &nbsp; 
                     <input id="txt_jid" type="text" /><br>
                     <label>Room's Name:</label> &nbsp; &nbsp; &nbsp; &nbsp; 
                     <input id="txt_name" type="text" />
                 </div>
+                <br>
+                <button id="btn_create">Create New Room</button>
             </div>
-            <br><br>
+            <br><br><br>
             <div id="div_bdelete">
                 <button id="btn_delete">Delete Selected Room</button>
             </div>
